--- a/style.css
+++ b/style.css
@@ -11,8 +11,7 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   z-index: -1;
   pointer-events: none;
 }
@@ -85,8 +84,7 @@
 #wayOfWorking .mainWarper .dyanamic_component .bg-video {
   width: 100%;
   height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 #wayOfWorking .mainWarper .dyanamic_component .blackBox {
   width: 100%;
@@ -105,10 +103,16 @@
 }
 #wayOfWorking .mainWarper .dyanamic_component .blackBox .hexagon_container .outerText {
   position: absolute;
-  color: #ffd900;
+  color: rgba(255, 217, 0, 0.288);
   z-index: 9;
   font-size: 24px;
   opacity: 1;
+}
+#wayOfWorking .mainWarper .dyanamic_component .blackBox .hexagon_container .outerText .outerText.checked {
+  background-color: transparent;
+}
+#wayOfWorking .mainWarper .dyanamic_component .blackBox .hexagon_container .outerText .outerText.upcoming {
+  background-color: transparent;
 }
 #wayOfWorking .mainWarper .dyanamic_component .blackBox .hexagon_container .outer1 {
   top: 53px;
@@ -146,8 +150,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  -webkit-clip-path: polygon(50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%, 0 25%);
-          clip-path: polygon(50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%, 0 25%);
+  clip-path: polygon(50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%, 0 25%);
   background: rgba(255, 217, 0, 0.1568627451);
   background-image: conic-gradient(#ffd900 0deg 1deg, #000000 10deg 360deg);
   position: relative;
@@ -161,8 +164,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  -webkit-clip-path: inherit;
-          clip-path: inherit;
+  clip-path: inherit;
   background-color: #000000;
   position: relative;
   overflow: hidden;
@@ -266,8 +268,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    -webkit-clip-path: polygon(50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%, 0 25%);
-            clip-path: polygon(50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%, 0 25%);
+    clip-path: polygon(50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%, 0 25%);
     background-color: rgba(255, 217, 0, 0.1568627451);
     overflow: hidden;
   }
