--- a/style.scss
+++ b/style.scss
@@ -99,10 +99,16 @@
           background-color: transparent;
           .outerText {
             position: absolute;
-            color: #ffd900;
+            color: rgba(255, 217, 0, 0.288);
             z-index: 9;
             font-size: 24px;
             opacity: 1;
+            .outerText.checked {
+              background-color: transparent;
+            }
+            .outerText.upcoming {
+              background-color: transparent;
+            }
           }
           .outer1 {
             top: 53px;
