--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@
 }
 #wayOfWorking .mainWarper .dyanamic_component .blackBox {
   width: 100%;
-  padding: 0;
+  padding: 10px;
   height: 100%;
   background-color: rgb(0, 0, 0);
   display: flex;
@@ -97,7 +97,8 @@
   overflow: hidden;
 }
 #wayOfWorking .mainWarper .dyanamic_component .blackBox .hexagon_container {
-  width: 570px;
+  width: 100%;
+  max-width: 563px;
   position: relative;
   background-color: transparent;
 }
@@ -145,13 +146,13 @@
   transform: rotate(-30deg);
 }
 #wayOfWorking .mainWarper .dyanamic_component .blackBox .hexagon_container .hexagon_warper {
-  width: 563px;
-  height: 647px;
+  width: 100%;
+  aspect-ratio: 80/100;
   display: flex;
   align-items: center;
   justify-content: center;
   clip-path: polygon(50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%, 0 25%);
-  background: rgba(255, 217, 0, 0.1568627451);
+  background: #ffd900;
   background-image: conic-gradient(#ffd900 0deg 1deg, #000000 10deg 360deg);
   position: relative;
   z-index: 1;
@@ -165,7 +166,7 @@
   align-items: center;
   justify-content: center;
   clip-path: inherit;
-  background-color: #000000;
+  background-color: rgb(0, 0, 0);
   position: relative;
   overflow: hidden;
   z-index: 1;
