--- a/style.css
+++ b/style.css
@@ -11,7 +11,8 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   z-index: -1;
   pointer-events: none;
 }
@@ -84,7 +85,8 @@
 #wayOfWorking .mainWarper .dyanamic_component .bg-video {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 #wayOfWorking .mainWarper .dyanamic_component .blackBox {
   width: 100%;
@@ -102,6 +104,19 @@
   position: relative;
   background-color: transparent;
 }
+#wayOfWorking .mainWarper .dyanamic_component .blackBox .hexagon_container .innerTex {
+  position: absolute;
+  width: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #fff;
+  font-size: 44px;
+  text-align: center;
+  line-height: 1.5;
+  opacity: 0;
+  z-index: 9;
+}
 #wayOfWorking .mainWarper .dyanamic_component .blackBox .hexagon_container .outerText {
   position: absolute;
   color: rgba(255, 217, 0, 0.288);
@@ -116,18 +131,18 @@
   background-color: transparent;
 }
 #wayOfWorking .mainWarper .dyanamic_component .blackBox .hexagon_container .outer1 {
-  top: 53px;
-  right: 71px;
-  transform: rotate(30deg);
+  top: 8%;
+  right: 14%;
+  transform: rotate(32deg);
 }
 #wayOfWorking .mainWarper .dyanamic_component .blackBox .hexagon_container .outer2 {
-  top: 290px;
-  right: -73px;
+  top: 47%;
+  right: -14%;
   transform: rotate(90deg);
 }
 #wayOfWorking .mainWarper .dyanamic_component .blackBox .hexagon_container .outer3 {
-  bottom: 52px;
-  right: 67px;
+  bottom: 10%;
+  right: 10%;
   transform: rotate(-30deg);
 }
 #wayOfWorking .mainWarper .dyanamic_component .blackBox .hexagon_container .outer4 {
@@ -151,8 +166,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  clip-path: polygon(50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%, 0 25%);
-  background: #ffd900;
+  -webkit-clip-path: polygon(50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%, 0 25%);
+          clip-path: polygon(50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%, 0 25%);
+  background: rgba(255, 217, 0, 0.308);
   background-image: conic-gradient(#ffd900 0deg 1deg, #000000 10deg 360deg);
   position: relative;
   z-index: 1;
@@ -165,7 +181,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  clip-path: inherit;
+  -webkit-clip-path: inherit;
+          clip-path: inherit;
   background-color: rgb(0, 0, 0);
   position: relative;
   overflow: hidden;
@@ -269,7 +286,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    clip-path: polygon(50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%, 0 25%);
+    -webkit-clip-path: polygon(50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%, 0 25%);
+            clip-path: polygon(50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%, 0 25%);
     background-color: rgba(255, 217, 0, 0.1568627451);
     overflow: hidden;
   }
