--- a/style.css
+++ b/style.css
@@ -17,6 +17,35 @@
   pointer-events: none;
 }
 
+#section_one {
+  background-color: #f8d300;
+}
+#section_one .first_section_wrapper {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5607843137);
+  color: white;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+#section_one .first_section_wrapper h1 {
+  font-size: 76px;
+  margin-bottom: 20px;
+}
+#section_one .first_section_wrapper p {
+  width: 100%;
+  max-width: 650px;
+  margin-bottom: 60px;
+}
+#section_one .first_section_wrapper span {
+  display: inline-block;
+  padding: 8px 28px;
+  border: 1px solid #f8d300;
+}
+
 #wayOfWorking {
   width: 100%;
   height: 100%;
@@ -110,12 +139,14 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  color: #fff;
-  font-size: 44px;
-  text-align: center;
-  line-height: 1.5;
   opacity: 0;
   z-index: 9;
+}
+#wayOfWorking .mainWarper .dyanamic_component .blackBox .hexagon_container .innerTex h3 {
+  color: #fff;
+  font-size: 56px;
+  text-align: center;
+  line-height: 1;
 }
 #wayOfWorking .mainWarper .dyanamic_component .blackBox .hexagon_container .outerText {
   position: absolute;
