--- a/style.scss
+++ b/style.scss
@@ -15,6 +15,34 @@
   z-index: -1;
   pointer-events: none;
 }
+#section_one {
+  background-color: #f8d300;
+  .first_section_wrapper {
+    width: 100%;
+    height: 100%;
+    background-color: #0000008f;
+    color: white;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    h1{
+      font-size: 76px;
+      margin-bottom: 20px;
+    }
+    p{
+      width: 100%;
+      max-width: 650px;
+      margin-bottom: 60px;
+    }
+    span{
+      display: inline-block;
+      padding: 8px 28px;
+      border: 1px solid #f8d300;
+    }
+  }
+}
 #wayOfWorking {
   width: 100%;
   height: 100%;
@@ -98,18 +126,20 @@
           max-width: 563px;
           position: relative;
           background-color: transparent;
-          .innerTex{
+          .innerTex {
             position: absolute;
             width: 100%;
             top: 50%;
             left: 50%;
-            transform: translate(-50% ,-50%);
-            color: #fff;
-            font-size: 44px;
-            text-align: center;
-            line-height: 1.5;
-            opacity: .0;
+            transform: translate(-50%, -50%);
+            opacity: 0;
             z-index: 9;
+            h3 {
+              color: #fff;
+              font-size: 56px;
+              text-align: center;
+              line-height: 1;
+            }
           }
           .outerText {
             position: absolute;
@@ -322,7 +352,7 @@
           }
         }
       }
-  
+
       .dyanamic_component {
         width: 100%;
         height: 100%;
@@ -351,17 +381,17 @@
             max-width: 563px;
             position: relative;
             background-color: transparent;
-            .innerTex{
+            .innerTex {
               position: absolute;
               width: 100%;
               top: 50%;
               left: 50%;
-              transform: translate(-50% ,-50%);
+              transform: translate(-50%, -50%);
               color: #fff;
               font-size: 24px;
               text-align: center;
               line-height: 1;
-              opacity: .0;
+              opacity: 0;
               z-index: 9;
             }
             .outerText {
@@ -430,7 +460,7 @@
               z-index: 1;
               padding: 2px;
               transform: scale(1);
-  
+
               .hexagon {
                 width: 100%;
                 height: 100%;
@@ -451,7 +481,7 @@
                   justify-content: center;
                   background-color: rgb(0, 0, 0);
                   opacity: 1;
-  
+
                   .mid_ball {
                     width: 100px;
                     height: 100px;
@@ -515,6 +545,5 @@
         }
       }
     }
-    
   }
 }
