--- a/home/homeStyle.css
+++ b/home/homeStyle.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+.hidden {
+  display: none !important;
+}
+
 #main_wrapper {
   width: 100%;
   height: 100%;
@@ -73,4 +77,59 @@
   white-space: nowrap;
   opacity: 0;
   color: yellow;
+}
+#main_wrapper #banner {
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-image: radial-gradient(circle at 50% 50%, rgba(0, 0, 0, 0.644), rgba(10, 230, 230, 0.692)), url("./images/imageone.png");
+  background-size: 100% 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+#main_wrapper #banner .banner_absolute_txt_1 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  text-align: center;
+}
+#main_wrapper #banner .banner_absolute_txt_1 h2 {
+  margin: 0;
+  font-size: 40px;
+  color: #000;
+}
+#main_wrapper #banner .banner_absolute_txt_2 {
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+  text-align: center;
+}
+#main_wrapper #banner .banner_absolute_txt_2 h2 {
+  margin: 0;
+  font-size: 40px;
+  color: #000;
+}
+#main_wrapper #banner .banner_wraper {
+  width: 400px;
+  height: 170px;
+  max-width: 100%;
+  background-color: rgba(255, 255, 255, 0);
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* Mask the video with the SVG text mask */
+}
+#main_wrapper #banner .banner_wraper .masked-video {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  mask: url(#textMask);
+  -webkit-mask: url(#textMask);
+  mask-type: alpha;
 }/*# sourceMappingURL=homeStyle.css.map */
