--- a/home/homeStyle.scss
+++ b/home/homeStyle.scss
@@ -1,4 +1,7 @@
 *{margin: 0; padding: 0; box-sizing: border-box;}
+.hidden{
+    display: none !important;
+}
 
 #main_wrapper{
     width: 100%;
@@ -65,6 +68,60 @@
                 }
             }
 
+        }
+    }
+    #banner{
+        width: 100%;
+        height: 100vh;
+        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-image: radial-gradient(circle at 50% 50%, rgba(0, 0, 0, 0.644), rgba(10, 230, 230, 0.692)), url('./images/imageone.png');
+        background-size: 100% 100%;
+        background-position: center;
+        background-repeat: no-repeat;
+        .banner_absolute_txt_1{
+            position: absolute;
+            top: 0;
+            left: 0;
+            text-align: center;
+            h2{
+                margin: 0;
+                font-size: 40px;
+                color: #000;
+            }
+        }
+        .banner_absolute_txt_2{
+            position: absolute;
+            bottom: 20px;
+            right: 20px;
+            text-align: center;
+            h2{
+                margin: 0;
+                font-size: 40px;
+                color: #000;
+            }
+        }
+        .banner_wraper{
+            width: 400px;
+            height: 170px;
+            max-width: 100%;
+            background-color: #ffffff00;
+            position: relative;
+            overflow: hidden;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            /* Mask the video with the SVG text mask */
+            .masked-video {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                mask: url(#textMask);
+                -webkit-mask: url(#textMask);
+                mask-type: alpha;
+            }
         }
     }
 }
